# snuffbox-cmake

./: CMakeLists.txt  README.md
doxygen/: config
snuffbox-test/: Thumbs.db  additive.effect  axew.fbx  base.fx  diffuse.material  main.js  particle.pfx  pfx.effect  post_processing.effect  pp.effect  quad.material  skybox.FBX  sphere.fbx  test.anim  test.box  test.effect  test.fbx  test.json  test.material
snuffbox-test/shaders/: base.fx  base2.fx  base_diffuse.fx  brush.fx  default_pp.fx  diffuse.fx  post_processing.fx  post_processing2.fx  post_processing_diffuse.fx  skybox.fx  terrain.fx  text.fx  ui.fx
src/: CMakeLists.txt
src/animation/: anim.cc  anim.h  animation_base.h  sprite_animation.cc  sprite_animation.h
src/application/: game.cc  game.h  logging.cc  logging.h  main.cc
src/cmake/: FindDirectX.cmake  FindFBX.cmake  FindFMOD.cmake  FindFreeType.cmake  FindPkgMacros.cmake  FindV8.cmake
src/console/: CMakeLists.txt  console.cc  console.h  console.ui
src/content/: content.cc  content.h  content_box.cc  content_box.h  content_manager.cc  content_manager.h
src/cvar/: cvar.cc  cvar.h
src/d3d11/: d3d11_blend_state.cc  d3d11_blend_state.h  d3d11_camera.cc  d3d11_camera.h  d3d11_constant_buffer.cc  d3d11_constant_buffer.h  d3d11_depth_state.cc  d3d11_depth_state.h  d3d11_effect.cc  d3d11_effect.h  d3d11_input_layout.cc  d3d11_input_layout.h  d3d11_light.cc  d3d11_light.h  d3d11_lighting.cc  d3d11_lighting.h  d3d11_line.cc  d3d11_line.h  d3d11_material.cc  d3d11_material.h  d3d11_rasterizer_state.cc  d3d11_rasterizer_state.h  d3d11_render_device.cc  d3d11_render_device.h  d3d11_render_queue.cc  d3d11_render_queue.h  d3d11_render_settings.cc  d3d11_render_settings.h  d3d11_render_target.cc  d3d11_render_target.h  d3d11_sampler_state.cc  d3d11_sampler_state.h  d3d11_scroll_area.cc  d3d11_scroll_area.h  d3d11_shader.cc  d3d11_shader.h  d3d11_texture.cc  d3d11_texture.h  d3d11_uniforms.cc  d3d11_uniforms.h  (+4 more)
src/d3d11/elements/: d3d11_billboard_element.cc  d3d11_billboard_element.h  d3d11_model_element.cc  d3d11_model_element.h  d3d11_polygon_element.cc  d3d11_polygon_element.h  d3d11_quad_element.cc  d3d11_quad_element.h  d3d11_render_element.cc  d3d11_render_element.h  d3d11_terrain_element.cc  d3d11_terrain_element.h  d3d11_text_element.cc  d3d11_text_element.cc.rej  d3d11_text_element.h  d3d11_widget_element.cc  d3d11_widget_element.h
src/d3d11/elements/particles/: d3d11_particle.cc  d3d11_particle.h  d3d11_particle_effect.cc  d3d11_particle_effect.h  d3d11_particle_system.cc  d3d11_particle_system.h
src/d3d11/shaders/: base.txt  base_diffuse.txt  brush.txt  cube_map.txt  d3d11_base_diffuse_shader.h  d3d11_base_shader.h  d3d11_brush_shader.h  d3d11_cube_map_shader.h  d3d11_post_processing_diffuse_shader.h  d3d11_post_processing_shader.h  d3d11_text_shader.h  d3d11_ui_shader.h  post_processing.txt  post_processing_diffuse.txt  text.txt  ui.txt
src/fbx/: fbx_loader.cc  fbx_loader.h  fbx_model.cc  fbx_model.h
src/fmod/: fmod_sound.cc  fmod_sound.h  fmod_sound_system.cc  fmod_sound_system.h
src/freetype/: freetype_font.cc  freetype_font.h  freetype_font_atlas.cc  freetype_font_atlas.h  freetype_font_manager.cc  freetype_font_manager.h  freetype_rich_text.cc  freetype_rich_text.h
src/input/: key.cc  key.h  keyboard.cc  keyboard.h  mouse.cc  mouse.h  mouse_area.cc  mouse_area.h
src/io/: io_manager.cc  io_manager.h
src/js/: js_callback.h  js_function_register.cc  js_function_register.h  js_object.h  js_object_register.cc  js_object_register.h  js_state_wrapper.cc  js_state_wrapper.h  js_wrapper.cc  js_wrapper.h
src/memory/: allocated_memory.cc  allocated_memory.h  shared_ptr.h
src/platform/: platform_file_watch.h  platform_file_watch_base.h  platform_render_device.h  platform_render_device_base.h  platform_text_file.h  platform_text_file_base.h  platform_window.h  platform_window_base.h
src/win32/: win32_file_watch.cc  win32_file_watch.h  win32_text_file.cc  win32_text_file.h  win32_window.cc  win32_window.h
